--- a/reactjs/styles/custom.scss
+++ b/reactjs/styles/custom.scss
@@ -2,4 +2,8 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "../src/components/navbar/navbar";
 @import "../src/components/cartwidget/cartwidget";
-@import "../src/components/itemlistcontainer/itemlistcontainer.scss";
+@import "../src/components/products/producsts.scss";
+@import "../src/components/banner/banner";
+@import "../src/components/videobanner/videobanner";
+@import "../src/components/Error404/error.scss";
+@import "../src/components/contacto/contacto";
