--- a/reactjs/src/components/banner/_banner.scss
+++ b/reactjs/src/components/banner/_banner.scss
@@ -2,7 +2,7 @@
     color: #fff;
     font-size: 5em;
     font-family: 'Anton', sans-serif;
-    background-color: $principal;
+    background-color: black;
 }
 
 .subtitle{
