--- a/reactjs/src/components/products/_producsts.scss
+++ b/reactjs/src/components/products/_producsts.scss
@@ -20,7 +20,7 @@
 
     .p-color{
         font-family: "Roboto Condensed", sans-serif;
-        background-color: $principal;
+        background-color: $danger;
         color: white;
         padding: 3px;
         font-size: 11px;
