--- a/reactjs/src/components/videobanner/_videobanner.scss
+++ b/reactjs/src/components/videobanner/_videobanner.scss
@@ -1,8 +1,9 @@
 
 .fullscreen-video {
-    width: 100vw;
-    height: 40vh;
+    width: 100%;
+    height: 80%;
     object-fit: cover;
+    overflow: hidden;
 }
   
 @media (max-width: 767px) {
